--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -12,17 +12,22 @@
             android:orientation="vertical"
             android:paddingLeft="10dip"
             android:paddingRight="10dip" 
-            android:layout_gravity="center">
+            android:layout_gravity="center">
+
             <ImageView
                 android:id="@+id/splashImage"
-                android:layout_width="225dp"
-                android:layout_height="225dp"
-                android:layout_gravity="center"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+				android:layout_marginTop="20dip"
+				android:layout_marginBottom="20dip"
+				android:layout_centerHorizontal="true"
                 android:src="@drawable/cnx_splash"/>
     		
     		<LinearLayout 
     		    android:layout_width="fill_parent"
     		    android:layout_height="wrap_content"
+                android:layout_weight="0.5"
     		    android:orientation="horizontal"
     		    android:paddingBottom="25dp">
     		        
