--- a/app/src/main/res/layout/card_list.xml
+++ b/app/src/main/res/layout/card_list.xml
@@ -8,7 +8,7 @@
     <ListView 
         android:id="@+id/cardListView"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="0dp"
         android:layout_weight="1.0"
         android:background="@android:color/transparent"/>
 
