--- a/app/src/main/res/layout/cards.xml
+++ b/app/src/main/res/layout/cards.xml
@@ -17,7 +17,7 @@
 		    android:id="@+id/deckPositionText"
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
-		    android:gravity="left"/>"
+		    android:gravity="left"/>
 		
 		<LinearLayout 
 		    android:layout_width="fill_parent"
@@ -37,7 +37,7 @@
 		        android:layout_height="wrap_content"
 		        android:gravity="center"
 		        android:layout_weight="3.0"
-		        android:textSize="16dip"/>
+		        android:textSize="16sp"/>
 		    
 		    <Button 
 		        android:id="@+id/nextCardButton"
