--- a/app/src/main/res/layout/quiz_mode.xml
+++ b/app/src/main/res/layout/quiz_mode.xml
@@ -50,7 +50,7 @@
         android:gravity="center"
         android:layout_gravity="center"
         android:paddingBottom="30dip"
-        android:textSize="20dip"/>
+        android:textSize="20sp"/>
 	    
     <RadioGroup 
         android:id="@+id/answersRadioGroup"
