--- a/app/src/main/res/menu/deck_details_menu.xml
+++ b/app/src/main/res/menu/deck_details_menu.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:id="@+id/editDeckActionItem" android:title="Edit" android:showAsAction="always|withText" android:icon="@drawable/ic_menu_edit" android:titleCondensed="Edit"></item>
-    <item android:id="@+id/deleteDeckActionItem" android:title="Delete" android:showAsAction="never|withText" android:icon="@drawable/ic_menu_delete"></item>
+<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" >
+    <item
+        android:id="@+id/editDeckActionItem"
+        android:title="Edit"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_menu_edit"
+        android:titleCondensed="Edit"/>
+
+    <item
+        android:id="@+id/deleteDeckActionItem"
+        android:title="Delete"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_menu_delete"/>
+
 
 </menu>
