--- a/app/src/main/res/menu/deck_editor_menu.xml
+++ b/app/src/main/res/menu/deck_editor_menu.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
         android:id="@+id/saveDeckActionItem"
-        app:showAsAction="always"
+        android:showAsAction="always"
         android:enabled="false"
         android:title="Save"
         android:icon="@drawable/save"/>
